# Agent-JS-Engine

./: .gitignore  AGENTS.md  Cargo.toml  MEMORY_BANK.md  PROGRESS.md  README.md  SYNTAX.md  TEST262_IMPLEMENTATION.md  debug_locale.js  fix.sh  fix_try.rs  parse_error_stats.rs  parse_error_stats_runner.rs  parse_test.rs  run_test262.sh
.github/workflows/: cross-arch-tests.yml  test262-core-profile.yml
examples/: async-generators.js  bigint.js  modern-syntax.js
src/: lib.rs  main.rs
src/engine/: env.rs  interpreter.rs  mod.rs  runtime.rs  value.rs
src/engine/interpreter/: async_runtime.rs  callables.rs  expression_ops.rs  functions_classes.rs  generator_eval.rs  generator_loops.rs  helpers.rs  members_private.rs  mod.rs  modules_ops.rs  statements.rs
src/engine/runtime/: agent.rs  array_buffer_installs.rs  builtins.rs  console.rs  deferred_namespace.rs  engine.rs  host_context.rs  host_disposable.rs  host_misc.rs  inspect.rs  intl_date_time.rs  intl_display_names.rs  intl_misc.rs  iterator.rs  mod.rs  module.rs  rewrite.rs  shadow_realm.rs  string_regexp.rs  test262.rs
src/engine/value/: equality.rs  js_value_impl.rs  mod.rs  namespace.rs  object.rs
src/gc/: mod.rs
src/lexer/: mod.rs
src/parser/: ast.rs  mod.rs
src/utils/: mod.rs  test_extractor.rs
tests/: async_generator_test.rs  bigint_interpreter_test.rs  bigint_test.rs  interpreter_debug_body_test.rs  interpreter_debug_call_test.rs  interpreter_debug_test.rs  interpreter_test.rs  isolated_test.rs  parser_test.rs  test262_runner.rs
tmp_scripts/: debug_preprocess.rs  fix_ast.py  fix_errors.py  parse_error_stats.py  patch_arrow.py  patch_ast.py  patch_binary.py  patch_binary_tokens.py  patch_class.py  patch_comma.py  patch_interp.py  patch_interp_drop.py  patch_interp_limit.py  patch_interp_try.py  patch_interp_unreachable.py  patch_interp_update_limit.py  patch_lexer.py  patch_literals.py  patch_parser.py  patch_postfix.py  patch_primary_final.py  patch_runner.py  patch_statement.py  patch_statement_loop.py  patch_ternary.py  patch_undefined.py  reproduce_issue.rs
