[package]
name = "ai-agent"
version = "0.1.0"
edition = "2024"
default-run = "ai-agent"

[dependencies]
boa_ast = "0.21.0"
boa_engine = { version = "0.21.0", features = ["temporal", "intl_bundled", "annex-b"] }
boa_interner = "0.21.0"
boa_parser = "0.21.0"
dirs = "6"
regex = "1.12.2"
rustyline = "15"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
walkdir = "2.5.0"

[patch.crates-io]
regress = { path = "vendor/regress" }
boa_engine = { path = "vendor/boa/core/engine" }
boa_ast = { path = "vendor/boa/core/ast" }
boa_interner = { path = "vendor/boa/core/interner" }
boa_parser = { path = "vendor/boa/core/parser" }
[[bin]]
name = "parse_error_stats"
path = "parse_error_stats.rs"

[[bin]]
name = "parse_error_stats_runner"
path = "parse_error_stats_runner.rs"
